# tfm-analysis

./: README.md  analyze_r1_skill_vs_luck.py  pyproject.toml
data/: r1_standings.csv  results.txt
